public/styles/helpers/_icons.scss
// Icon styles
// --------------------------------------------------

[class*="hero-octicon"] {
  display: block;
  width: 75px;
  height: 75px;
  padding-top: 16.5px;
  margin: 0 auto $spacer-3;
  font-size: 42px;
  color: lighten(desaturate($theme-color, 30%), 20%);
  text-align: center;
  background-color: #fff;
  border: 1px solid $gray-5;
  border-radius: 50%;

  .PRIMER-REMOVE-ME & {
    @extend [class*="hero-octicon"];
  }
}

[class*="inline-octicon"] {
  float: left;
  width: 42px;
  color: lighten(desaturate($theme-color, 30%), 20%);
}

.hero-octicon {
  color: $heading-color;
  background-color: transparent;
  // border: 1px solid mix($heading-color, #fff, 30%);
}

.hero-octicon-white,
.inline-octicon-white {
  color: lighten(desaturate($theme-color, 50%), 50%);
}

.inline-octicon-body {
  padding-left: 42px;
}

.hero-feature {
  .hero-octicon {
    transition: transform 0.32s;
  }

  &:hover .hero-octicon {
    transform: scale(1.1);
    transition-duration: 0.08s;
  }

  &:active .hero-octicon {
    transform: scale(0.92);
    transition-duration: 0;
  }
}

.hero-link {
  color: $heading-color !important;

  &:hover {
    text-decoration: none !important;
  }
}

.btn {
  .octicon {
    vertical-align: middle;
  }
}

.header-discord {
  svg {
    circle {
      transition: all 0.3s;
      fill: $jumbo-color;
    }

    path {
      fill: #2f3241;
    }
  
    &.active,
    &:hover{
      circle {
        fill: $jumbo-color-strong;
      }
    }
  
    &:active {
      circle {
        fill: $jumbo-color-subtle;
      }
    }
  }
}

.footer-discord {
  svg {
    circle {
      color: $main-color-strong;
    }
  
    path {
      fill: #f6f8f8;
    }
    
    &:hover {
      circle {
        fill: $main-color-subtle;
      }
    }
  }
}

